# foxglove_lego_robot

./: LICENSE  README.md
foxglove_lego_robot/: CMakeLists.txt  package.xml
foxglove_lego_robot/meshes/: antenna.dae  arm.dae  flowers.dae  head.dae  torso.dae
foxglove_lego_robot/urdf/: robot.urdf.xacro
